Addressed deprecation warnings. Removed JvmIsolate interface to simplify code.