@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2013 Christian Gleissner.
+ * Copyright (c) 2013-2018 Christian Gleissner.
  * All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
@@ -30,38 +30,36 @@
  */
 package com.jisolate.classloader;
 
-import java.lang.reflect.Method;
-import java.net.URL;
-import java.net.URLClassLoader;
-import java.util.ArrayList;
-import java.util.Collection;
-import java.util.List;
-import java.util.concurrent.atomic.AtomicInteger;
-
+import com.google.common.collect.Lists;
+import com.jisolate.properties.ThreadLocalProperties;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import com.google.common.base.Optional;
-import com.google.common.base.Throwables;
-import com.google.common.collect.Lists;
-import com.jisolate.Isolater;
-import com.jisolate.properties.ThreadLocalProperties;
+import java.lang.reflect.Method;
+import java.net.URL;
+import java.net.URLClassLoader;
+import java.util.Collection;
+import java.util.List;
+import java.util.Optional;
+import java.util.concurrent.atomic.AtomicInteger;
+
+import static com.google.common.collect.Lists.newArrayList;
+import static java.lang.String.format;
 
 /**
- * Isolater that uses a child-first classloader along with thread-local system properties to ensure
- * isolation.
+ * Isolater that uses a child-first classloader along with thread-local system properties to ensure isolation.
  */
-public class ClassLoaderIsolater implements Isolater {
+public class ClassLoaderIsolater {
 
     public static class Builder {
         private final ClassLoaderIsolater template = new ClassLoaderIsolater();
 
-        public ClassLoaderIsolate isolate() {
-            return template.isolate();
+        public void isolate() {
+            template.isolate();
         }
 
         public Builder withIsolatableArguments(Object... isolatableArguments) {
-            template.isolatableArguments = Lists.newArrayList(isolatableArguments);
+            template.isolatableArguments = newArrayList(isolatableArguments);
             return this;
         }
 
@@ -71,12 +69,12 @@ public class ClassLoaderIsolater implements Isolater {
         }
 
         public Builder withJarsToExcludeFromClassPath(Collection<String> jarsToExcludeFromClassPath) {
-            template.jarsToExcludeFromClassPath = Lists.newArrayList(jarsToExcludeFromClassPath);
+            template.jarsToExcludeFromClassPath = newArrayList(jarsToExcludeFromClassPath);
             return this;
         }
 
         public Builder withMainClassArguments(Collection<Object> isolatableArguments) {
-            template.isolatableArguments = Lists.newArrayList(isolatableArguments);
+            template.isolatableArguments = newArrayList(isolatableArguments);
             return this;
         }
 
@@ -87,14 +85,13 @@ public class ClassLoaderIsolater implements Isolater {
     }
 
     private static class IsolatedRunnable implements Runnable {
-
         private final URLClassLoader contextClassLoader;
         private final List<Object> isolatableArguments;
         private final String isolatableClassName;
         private volatile Object result;
 
         IsolatedRunnable(URLClassLoader contextClassLoader, String isolatableClassName,
-                List<Object> isolatableArguments) {
+                         List<Object> isolatableArguments) {
             this.contextClassLoader = contextClassLoader;
             this.isolatableArguments = isolatableArguments;
             this.isolatableClassName = isolatableClassName;
@@ -117,15 +114,14 @@ public class ClassLoaderIsolater implements Isolater {
                         result = invokeCallMethod(method.get());
                     } else {
                         throw new RuntimeException(
-                                String.format(
+                                format(
                                         "The class '%s' contained neither a static main(String[]) "
                                                 + "nor a call(Object...) method and could therefore not be invoked",
                                         isolatableClassName));
                     }
                 }
             } catch (Exception e) {
-                LOG.warn("Failed to execute {}#main() in isolation", isolatableClassName, e);
-                throw Throwables.propagate(e);
+                throw new RuntimeException(format("Failed to execute %s#main() in isolation", isolatableClassName), e);
             }
         }
 
@@ -133,8 +129,8 @@ public class ClassLoaderIsolater implements Isolater {
             try {
                 return Optional.of(clazz.getMethod("call", Object[].class));
             } catch (Exception e) {
-                LOG.debug("Clazz contained no call() method: {}", clazz, e);
-                return Optional.absent();
+                log.debug("Clazz contained no call() method: {}", clazz, e);
+                return Optional.empty();
             }
         }
 
@@ -142,21 +138,21 @@ public class ClassLoaderIsolater implements Isolater {
             try {
                 return Optional.of(clazz.getMethod("main", String[].class));
             } catch (Exception e) {
-                LOG.debug("Clazz contained no main() method: {}", clazz, e);
-                return Optional.absent();
+                log.debug("Clazz contained no main() method: {}", clazz, e);
+                return Optional.empty();
             }
         }
 
         private Object invokeCallMethod(Method method) {
             try {
                 long startTime = System.currentTimeMillis();
-                Object instance = method.getDeclaringClass().newInstance();
+                Object instance = method.getDeclaringClass().getDeclaredConstructor().newInstance();
                 Object[] arrayArgs = null;
                 if (isolatableArguments != null) {
-                    arrayArgs = isolatableArguments.toArray(new Object[isolatableArguments.size()]);
+                    arrayArgs = isolatableArguments.toArray(new Object[0]);
                 }
                 Object result = method.invoke(instance, arrayArgs);
-                LOG.info("Invoked {}#call in {}ms", isolatableClassName, System.currentTimeMillis()
+                log.info("Invoked {}#call in {}ms", isolatableClassName, System.currentTimeMillis()
                         - startTime);
                 return result;
             } catch (Exception e) {
@@ -169,10 +165,10 @@ public class ClassLoaderIsolater implements Isolater {
                 long startTime = System.currentTimeMillis();
                 String[] arrayArgs = null;
                 if (isolatableArguments != null) {
-                    arrayArgs = isolatableArguments.toArray(new String[isolatableArguments.size()]);
+                    arrayArgs = isolatableArguments.toArray(new String[0]);
                 }
-                method.invoke(null, new Object[] { arrayArgs });
-                LOG.info("Invoked {}#main in {}ms", isolatableClassName, System.currentTimeMillis()
+                method.invoke(null, new Object[]{arrayArgs});
+                log.info("Invoked {}#main in {}ms", isolatableClassName, System.currentTimeMillis()
                         - startTime);
             } catch (Exception e) {
                 throw new RuntimeException("Invocation of main method failed: " + method, e);
@@ -183,14 +179,14 @@ public class ClassLoaderIsolater implements Isolater {
             long startTime = System.currentTimeMillis();
             Thread.currentThread().setContextClassLoader(contextClassLoader);
             Class<?> clazz = Class.forName(isolatableClassName, true, contextClassLoader);
-            LOG.info("Loaded isolated class {} in {}ms", isolatableClassName,
+            log.info("Loaded isolated class {} in {}ms", isolatableClassName,
                     System.currentTimeMillis() - startTime);
             return clazz;
         }
     }
 
-    private static final Logger LOG = LoggerFactory.getLogger(ClassLoaderIsolater.class);
-    public ArrayList<Object> isolatableArguments;
+    private static final Logger log = LoggerFactory.getLogger(ClassLoaderIsolater.class);
+    public List<Object> isolatableArguments;
     private final AtomicInteger isolationThreadCount = new AtomicInteger();
     private Collection<String> jarsToExcludeFromClassPath;
     private String mainClassName;
@@ -198,7 +194,7 @@ public class ClassLoaderIsolater implements Isolater {
     private ClassLoaderIsolater() {
     }
 
-    public ClassLoaderIsolate isolate() {
+    public void isolate() {
         URL[] urls = UrlProvider.getClassPathUrls(jarsToExcludeFromClassPath);
         URLClassLoader contextClassLoader = new ChildFirstUrlClassLoader(urls, Thread
                 .currentThread().getContextClassLoader());
@@ -209,12 +205,5 @@ public class ClassLoaderIsolater implements Isolater {
         isolatedThread.setDaemon(true);
         isolatedThread.setName("Isolater-" + isolationThreadCount.incrementAndGet());
         isolatedThread.start();
-
-        return new ClassLoaderIsolate(isolatedThread);
-    }
-
-    public <T> T isolate(Class<T> t) {
-        // TODO Auto-generated method stub
-        return null;
     }
 }
