@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2013 Christian Gleissner.
+ * Copyright (c) 2013-2018 Christian Gleissner.
  * All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
@@ -30,18 +30,14 @@
  */
 package com.jisolate.classloader;
 
-import static org.hamcrest.Matchers.not;
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertThat;
-import static org.junit.Assert.assertTrue;
+import org.junit.Before;
+import org.junit.Test;
 
 import java.lang.reflect.Method;
 import java.net.URL;
 
-import org.junit.Before;
-import org.junit.Test;
-
-import com.google.common.collect.Lists;
+import static com.google.common.collect.Lists.newArrayList;
+import static org.assertj.core.api.Assertions.assertThat;
 
 public class ChildFirstUrlClassLoaderTest {
 
@@ -52,25 +48,25 @@ public class ChildFirstUrlClassLoaderTest {
     @Test
     public void canInvokeIsolatedPingMethod() throws Exception {
         Class<?> nonIsolatedClass = isolatedClassLoader.loadClass(CLASS_NAME);
-        Object result = invoke(nonIsolatedClass, "ping", new Class[] { String.class },
-                new Object[] { "world" });
-        assertEquals("pong world", result);
+        Object result = invoke(nonIsolatedClass, "ping", new Class[]{String.class},
+                new Object[]{"world"});
+        assertThat("pong world").isEqualTo(result);
     }
 
     @Test
     public void canInvokeIsolatedStaticPingMethod() throws Exception {
         Class<?> isolatedClass = isolatedClassLoader.loadClass(CLASS_NAME);
-        Object result = invoke(isolatedClass, "staticPing", new Class[] { String.class },
-                new Object[] { "world" });
-        assertEquals("staticPong world", result);
+        Object result = invoke(isolatedClass, "staticPing", new Class[]{String.class},
+                new Object[]{"world"});
+        assertThat("staticPong world").isEqualTo(result);
     }
 
     @Test
     public void canInvokeNonIsolatedPingMethod() throws Exception {
         Class<?> nonIsolatedClass = classLoader.loadClass(CLASS_NAME);
-        Object result = invoke(nonIsolatedClass, "ping", new Class[] { String.class },
-                new Object[] { "world" });
-        assertEquals("pong world", result);
+        Object result = invoke(nonIsolatedClass, "ping", new Class[]{String.class},
+                new Object[]{"world"});
+        assertThat("pong world").isEqualTo(result);
     }
 
     @SuppressWarnings("rawtypes")
@@ -78,12 +74,12 @@ public class ChildFirstUrlClassLoaderTest {
     public void isolatedClassIsNotSameAsNonIsolatedClass() throws Exception {
         Class isolatedClass = isolatedClassLoader.loadClass(CLASS_NAME);
         Class nonIsolatedClass = classLoader.loadClass(CLASS_NAME);
-        assertThat(isolatedClass, not(nonIsolatedClass));
+        assertThat(isolatedClass).isNotEqualTo(nonIsolatedClass);
     }
 
     @Before
     public void setUp() {
-        URL[] urls = UrlProvider.getClassPathUrls(Lists.<String> newArrayList());
+        URL[] urls = UrlProvider.getClassPathUrls(newArrayList());
         classLoader = Thread.currentThread().getContextClassLoader();
         isolatedClassLoader = new ChildFirstUrlClassLoader(urls, classLoader);
     }
@@ -93,21 +89,20 @@ public class ChildFirstUrlClassLoaderTest {
     public void transitiveIsolationWorks() throws Exception {
         Class isolatedClass = isolatedClassLoader.loadClass(CLASS_NAME);
         Object isolatedObject = invoke(isolatedClass, "getMessageWrapper",
-                new Class[] { String.class }, new Object[] { "msg" });
+                new Class[]{String.class}, new Object[]{"msg"});
 
         Class nonIsolatedClass = classLoader.loadClass(CLASS_NAME);
         Object nonIsolatedObject = invoke(nonIsolatedClass, "getMessageWrapper",
-                new Class[] { String.class }, new Object[] { "msg" });
+                new Class[]{String.class}, new Object[]{"msg"});
 
-        assertTrue(isolatedObject.getClass() != nonIsolatedObject.getClass());
-        assertTrue(isolatedObject.getClass().getName()
-                .equals(nonIsolatedObject.getClass().getName()));
-        assertEquals("" + isolatedObject, "" + nonIsolatedObject);
+        assertThat(isolatedObject.getClass()).isNotSameAs(nonIsolatedObject.getClass());
+        assertThat(isolatedObject.getClass().getName()).isEqualTo(nonIsolatedObject.getClass().getName());
+        assertThat("" + isolatedObject).isEqualTo("" + nonIsolatedObject);
     }
 
     private Object invoke(Class<?> clazz, String methodName, Class<?>[] paramTypes, Object[] args)
             throws Exception {
-        Object o = clazz.newInstance();
+        Object o = clazz.getDeclaredConstructor().newInstance();
         Method m = clazz.getMethod(methodName, paramTypes);
         Object result = m.invoke(o, args);
         return result;
